--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,12 @@ go:
  - release
  - tip
 
+before_install:
+  - go get github.com/axw/gocov/gocov
+  - go get github.com/mattn/goveralls
+  - go get code.google.com/p/go.tools/cmd/cover
+
 script:
  - go test -v ./
+ - $HOME/gopath/bin/goveralls -repotoken lWoqviTpEWBCDCv393b5q3j514JO4ONvp
+ 
